--- a/index.html
+++ b/index.html
@@ -8,25 +8,55 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
-        <a href="#"><img src="./img/logo (1).webp" alt=""></a>
-        <div class="nav-links" id="navlinks">
-            <i class="fa-solid fa-x" onclick="hideMenu()"></i>
-            <ul>
-                <li><a href="#home">HOME</a></li>
-                <li><a href="#about">ABOUT</a></li>
-                <li><a href="#product">PRODUCT</a></li>
-                <li><a href="#service">SERVICE</a></li>
-                <li><a href="#conect">CONTECT</a></li>
-            </ul>
-        </div>
-        <div class="search">
-            <input type="text" placeholder="Enter your Gmail">
-            <button>SIGN IN</button>
-        </div>
-        <i class="fa-solid fa-bars" onclick="openMenu()"></i>
-    </nav>
+<header>
 
+    <!-- <div class="home"> -->
+        <nav>
+            <a href="#"><img src="./img/logo (1).webp" alt=""></a>
+            <div class="nav-links" id="navlinks">
+                <i class="fa-solid fa-x" style="color: #fff;" onclick="hideMenu()"></i>
+                <ul>
+                    <li><a href="#home">HOME</a></li>
+                    <li><a href="#about">ABOUT</a></li>
+                    <li><a href="#product">PRODUCT</a></li>
+                    <li><a href="#service">SERVICE</a></li>
+                    <li><a href="#conect">CONTECT</a></li>
+                </ul>
+            </div>
+            <div class="search">
+                <input type="text" placeholder="Enter your Gmail">
+                <button>SIGN IN</button>
+            </div>
+            <i class="fa-solid fa-bars" style="color: #000;" onclick="openMenu()"></i>
+        </nav>
+     <!-- </div> -->
+</header>
+
+<main>
+    <div class="big-box">
+
+        <div class="box-1">
+         <h1>We Bring Solutions To <br> Make Life Easier</h1>
+         <p>Our world wide powerful websites for business it is the best method<br>
+        of business Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit</p>
+        <button><i style="color: blue;" class="fa-solid fa-caret-right"></i></button>
+
+
+        </div>
+        <div class="box-2">
+            <div class="img-box">
+                <img src="https://webangon.com/html/bisness/img/slider/t2.jpg">
+            </div>
+        </div>
+        
+    </div>
+
+
+</main>
+
+<footer>
+
+</footer>
     
 
     <script src="script.js"></script>
